# artificial-intelligence

./: README.md
task1_modelling/pddl/: domain.pddl  problem_simple_instance.pddl  problem_two_robots_instance.pddl
task1_modelling/results/: ASTAR_FF_two_robots_instance.txt  EHC_FF_simple_instance.txt  EHC_FF_two_robots_instance.txt
task2_classical_planning/pddl/instance_2_1/: domain.pddl  problem.pddl
task2_classical_planning/pddl/instance_2_2/: domain.pddl  problem_simple_instance.pddl  problem_two_robots_instance.pddl
task2_classical_planning/results/instance_2_1/: ASTAR_AS_planner_result.txt  ASTAR_FF_planner_result.txt  ASTAR_IndustrialProcessHeuristic_planner_result_1.txt  ASTAR_IndustrialProcessHeuristic_planner_result_2.txt  ASTAR_IndustrialProcessHeuristic_planner_result_3.txt  EHC_FF_planner_result.txt
task2_classical_planning/results/instance_2_2/single_agent_problem/: ASTAR_AS_planner_result.txt  ASTAR_FF_planner_result.txt  ASTAR_IndustrialProcessHeuristic_planner_result_1.txt  ASTAR_IndustrialProcessHeuristic_planner_result_2.txt  ASTAR_IndustrialProcessHeuristic_planner_result_3.txt  EHC_FF_planner_result.txt
task2_classical_planning/results/instance_2_2/two_agents_problem/: ASTAR_20depth_IndustralProcessHeuristic_planner_result.txt  ASTAR_5depth_IndustralProcessHeuristic_planner_result.txt  ASTAR_60depth_IndustralProcessHeuristic_planner_result.txt  ASTAR_90depth_IndustralProcessHeuristic_planner_result.txt  ASTAR_AS_planner_result.txt  ASTAR_FF_planner_result.txt  EHC_FF_planner_result.txt
task2_classical_planning/src/: IndustrialProcessCutOffPlanner.java  IndustrialProcessHeuristic.java  IndustrialProcessPlanner.java  Node.java
task3_temporal_planning_robotics/instance_3_1/: domain.pddl  problem.pddl  problem_resolution_lpg-td_quality.txt  problem_resolution_lpg-td_speedy.txt
task3_temporal_planning_robotics/instance_3_2/industrial_manufacturing_service_robots/: CMakeLists.txt  package.xml
task3_temporal_planning_robotics/instance_3_2/industrial_manufacturing_service_robots/launch/: commands  plansys2_msl.py
task3_temporal_planning_robotics/instance_3_2/industrial_manufacturing_service_robots/pddl/: domain.pddl  plan.txt  problem.pddl
task3_temporal_planning_robotics/instance_3_2/industrial_manufacturing_service_robots/src/: empty_box_in_location_action_node.cpp  empty_box_in_workstation_action_node.cpp  enter_workstation_action_node.cpp  exit_workstation_action_node.cpp  fill_box_in_location_action_node.cpp  fill_box_in_warehouse_action_node.cpp  fill_box_in_workstation_action_node.cpp  load_box_from_location_action_node.cpp  load_box_from_workstation_action_node.cpp  move_to_location_action_node.cpp  move_to_warehouse_action_node.cpp  put_down_box_in_location_action_node.cpp  put_down_box_in_workstation_action_node.cpp
